tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/invalid-hex.stderr
TOML parse error at line 1, column 20
  |
1 | invalid-hex = 0xaafz
  |                    ^
expected newline, `#`
